# Vector-DB-RAG-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
claude-files/docs/: 06-implementation-plan.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: benchmark.ts  client.ts  engine.ts  ingest.ts  query.ts  search.ts  status.ts  vectors.ts
frontend/src/components/: DataLoader.tsx
frontend/src/components/canvas/: CanvasLegend.tsx  CanvasOverlay.tsx  VectorSpaceCanvas.tsx  VectorTooltip.tsx
frontend/src/components/layout/: RightPanel.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/components/panels/: AskAIComposer.tsx  AskAIPanel.tsx  AskAIPromptChips.tsx  BenchmarksPanel.tsx  ChatMessage.tsx  IngestPanel.tsx  SearchPanel.tsx  SourceCitation.tsx
frontend/src/components/terminal/: LogEntry.tsx  TerminalLog.tsx
frontend/src/components/ui/: Button.tsx  ConfirmDialog.tsx  Select.tsx  Slider.tsx  Tooltip.tsx
frontend/src/hooks/: useVectorCanvas.ts  useVoiceInput.ts
frontend/src/lib/: utils.ts
frontend/src/mocks/: vectors.ts
frontend/src/store/: canvasStore.ts  engineStore.ts  sessionStore.ts  terminalStore.ts
frontend/src/types/: benchmark.ts  index.ts  ingest.ts  log.ts  rag.ts  search.ts  vector.ts
src/vectordb/: main.py
src/vectordb/ai/: chunker.py  embedder.py  generator.py  reranker.py
src/vectordb/api/: routes.py  schemas.py  state.py
src/vectordb/core/: logger.py  metrics.py  types.py  wal.py
src/vectordb/core/indexes/: base.py  bm25.py  brute_force.py  hnsw.py  hybrid.py  kd_tree.py
tests/: test_api.py  test_brute_force.py  test_hnsw.py  test_kd_tree.py  test_metrics.py
