[project]
name = "vector-db-project"
version = "0.1.0"
description = "A custom Vector Database and RAG pipeline built from scratch implementing HNSW, KD-Tree, and Brute Force search algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "langchain-text-splitters>=1.1.2",
    "nltk>=3.9.4",
    "numpy>=1.26.0",
    "ollama>=0.6.2",
    "tiktoken>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src/vectordb"]
