[project]
name = "vector-db-project"
version = "0.1.0"
description = "A custom Vector Database and RAG pipeline built from scratch implementing HNSW, KD-Tree, and Brute Force search algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "nltk>=3.9.4",
    "numpy>=1.26.0",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src/vectordb"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true 
mypy_path = "src"
explicit_package_bases = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "scipy>=1.15.3",
]
